updated website links and fixed viewheight/overflow on mobile

--- a/website/footer/footer.css
+++ b/website/footer/footer.css
@@ -5,7 +5,6 @@
     gap: 25px;
     width: 100%;
     min-height: calc(8vh);
-    max-height: calc(8vh);
     padding: 20px;
     text-align: center;
     align-items: end;      
