--- a/website/stylish.css
+++ b/website/stylish.css
@@ -103,7 +103,7 @@ html, body {
   height: 100%;
   display: flex;
   flex-direction: row;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 body {
@@ -192,11 +192,10 @@ body {
 
 
 #ui-wrapper {
-  position: relative;
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100vh;
+  height: calc(var(--real-vh, 1vh) * 100);
   padding: 15px 15px 0px 15px;
   background: #00000080;
   overflow-y: auto;
@@ -289,8 +288,8 @@ body {
   }
   .section-container-bottom {
     padding: 5px;
-    min-height: calc(84vh + 3px);
-    max-height: calc(84vh + 3px);
+    min-height: calc(80vh + 3px);
+    max-height: calc(80vh + 3px);
   }
   .gitsvg {
     width: 20px; 
